<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    android:fitsSystemWindows="false"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="MissingDefaultResource">


    <ImageView
        android:id="@+id/img_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:padding='4dp'
        android:layout_marginTop="@dimen/_12sdp"
        android:src="@drawable/arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#222222" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/setting"
        android:textColor="#222222"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/img_back"
        app:layout_constraintStart_toEndOf="@id/img_back"
        app:layout_constraintTop_toTopOf="@+id/img_back" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_12sdp"
        app:layout_constraintTop_toBottomOf="@id/img_back"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ln_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/_4sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">
            <ImageView
                android:id="@+id/img_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_4sdp"
                android:layout_marginStart="@dimen/_20ssp"
                android:src="@drawable/ic_outline_language"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/arrow_left"
                android:text="@string/language"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_language"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv_name_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_left"
                android:text="@string/vietnamese"
                android:paddingEnd="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/ic_max"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/ic_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:layout_marginStart="@dimen/_5sdp"
                android:padding="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:src="@drawable/ic_arrow_right"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/ln_tutorial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/_4sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20ssp"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/ic_tutorial" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/arrow_left"
                android:text="@string/tutorial"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ln_private"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/_4sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20ssp"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/ic_private" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/arrow_left"
                android:text="@string/private_policy"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>



        <LinearLayout
            android:id="@+id/ln_share_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/_4sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20ssp"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/ic_share_app" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/arrow_left"
                android:text="@string/share_app"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ln_rate_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/_4sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20ssp"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/ic_rate_app" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/arrow_left"
                android:text="@string/rate_app"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>